# gymApp

backend/: conftest.py  manage.py  pyproject.toml  pytest.ini
backend/exercises/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
backend/exercises/management/commands/: seed_exercises.py
backend/exercises/migrations/: 0001_initial.py  0002_initial.py
backend/exercises/tests/: test_api.py  test_filters.py  test_models.py
backend/gym/: settings.py  urls.py
backend/measurements/: models.py
backend/measurements/migrations/: 0001_initial.py  0002_initial.py
backend/stats/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/stats/migrations/: 0001_initial.py
backend/users/: models.py  serializers.py  tasks.py  tokens.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py  0002_user_name.py  0003_user_created_at_user_updated_at.py
backend/users/tests/: test_auth.py  test_tokens.py
backend/workouts/: admin.py  models.py  serializers.py  urls.py  views.py
backend/workouts/migrations/: 0001_initial.py
mobile/: package.json  pnpm-lock.yaml
mobile/@types/: api.d.ts  react-native-element-dropdown.d.ts
mobile/app/: auth.tsx  index.tsx
mobile/app/(tabs)/: _layout.tsx  five.tsx  four.tsx  index.tsx  three.tsx  two.tsx
mobile/services/: auth.ts
mobile/utils/: tokenStorage.ts
